finally got the popover to work when user hovers over the inbox line item. the bootstrap was being overwritten by the google cdn script for the jquery at the bottom of the page bellow the bower components scripts

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </li>
           <!-- green dot to be needs to be on top right corner of text -->
           <li id="navLinesLeft">
-            <a href="#"  data-container="body" data-toggle="popover" data-placement="bottom" data-trigger="hover" data-html="true" >inbox</a>
+            <a href="#" class="inboxPopover" data-container="body" data-toggle="popover" data-placement="bottom" data-trigger="hover" data-html="true">inbox</a>
           </li>
         </div>
 
@@ -172,20 +172,21 @@
     </div>
     <footer>
     </footer>
-  </div>
     <!-- Template for the popover on the inbox line element -->
     <div id="popoverTemplate" class="hide">
       <p>this is the popover template</p>
     </div>
+  </div>
+
 
   <!-- bower:js -->
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <!-- endbower -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
    <script>
     window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
-  </script>
+  </script> -->
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
