--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </ul>
       </div>
     </aside>
-    <div class="mainContent">
+    <div class="mainContent" >
       <nav class="postsNav">
         <ul>
           <div class="leftNav">
@@ -145,30 +145,30 @@
           </div>
         </ul>
       </nav>
-      <div class="dashboardPosts">
+      <!-- <div class="dashboardPosts"> -->
         <i class="fa fa-sort-asc fa-3x"></i>
         <div class="postsContainer">
-          <figure>
+          <figure class="col-md-4">
             <a href="">
               <img src="http://lorempixel.com/400/200" />
             </a>
             <figcaption>Outdoor</figcaption>
           </figure>
 
-          <figure>
+          <figure class="col-md-4">
             <a href="">
               <img src="http://lorempixel.com/400/200" />
             </a>
             <figcaption>Outdoor</figcaption>
           </figure>
-          <figure>
+          <figure class="col-md-4">
             <a href="">
               <img src="http://lorempixel.com/400/200" />
             </a>
             <figcaption>Outdoor</figcaption>
           </figure>
         </div>
-      </div>
+      <!-- </div> -->
     </div>
     <footer>
     </footer>
@@ -189,24 +189,6 @@
   </script> -->
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <!-- <script>
-    (function(b, o, i, l, e, r) {
-      b.GoogleAnalyticsObject = l;
-      b[l] || (b[l] =
-        function() {
-          (b[l].q = b[l].q || []).push(arguments)
-        });
-      b[l].l = +new Date;
-      e = o.createElement(i);
-      r = o.getElementsByTagName(i)[0];
-      e.src = '//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e, r)
-    }(window, document, 'script', 'ga'));
-    ga('create', 'UA-XXXXX-X');
-    ga('send', 'pageview');
-  </script> -->
 </body>
 
 </html>
