did a little refactor on the aside timeline and finished the styling for the popover and added the see all button. still dont have the hero image carousel the hover stats on the images with icon overlay and dont have the pin it and heart icons at the top right of the hero image and the dashboard images

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </ul>
       </div>
     </aside>
-    <div class="mainContent" >
+    <div class="mainContent">
       <nav class="postsNav">
         <ul>
           <div class="leftNav">
@@ -145,36 +145,51 @@
           </div>
         </ul>
       </nav>
-      <!-- <div class="dashboardPosts"> -->
-        <i class="fa fa-sort-asc fa-3x"></i>
-        <div class="postsContainer">
-          <figure class="col-md-4">
-            <a href="">
-              <img src="http://lorempixel.com/400/200" />
-            </a>
-            <figcaption>Outdoor</figcaption>
-          </figure>
+      <div class="dashboardPosts">
+      <i class="fa fa-sort-asc fa-3x"></i>
+      <div class="postsContainer">
+        <figure class="col-md-4">
+          <a href="">
+            <img src="http://lorempixel.com/400/200" />
+          </a>
+          <figcaption>Outdoor</figcaption>
+        </figure>
 
-          <figure class="col-md-4">
-            <a href="">
-              <img src="http://lorempixel.com/400/200" />
-            </a>
-            <figcaption>Outdoor</figcaption>
-          </figure>
-          <figure class="col-md-4">
-            <a href="">
-              <img src="http://lorempixel.com/400/200" />
-            </a>
-            <figcaption>Outdoor</figcaption>
-          </figure>
-        </div>
-      <!-- </div> -->
+        <figure class="col-md-4">
+          <a href="">
+            <img src="http://lorempixel.com/400/200" />
+          </a>
+          <figcaption>Outdoor</figcaption>
+        </figure>
+        <figure class="col-md-4">
+          <a href="">
+            <img src="http://lorempixel.com/400/200" />
+          </a>
+          <figcaption>Outdoor</figcaption>
+        </figure>
+      </div>
+      </div>
     </div>
     <footer>
     </footer>
-    <!-- Template for the popover on the inbox line element -->
+    <!-- Template for the popover on the inbox line element: class="hide" -->
     <div id="popoverTemplate" class="hide">
-      <p>this is the popover template</p>
+      <ul class="userMessages">
+        <li>
+          <img src="img/Garrett.jpg" />
+          <h5>Garrett Anderson</h5>
+          <time>Today, 15:20</time>
+          <p>Wicked pins</p>
+        </li>
+        <hr>
+        <li>
+          <img src="img/Garrett.jpg" />
+          <h5>Garrett Anderson</h5>
+          <time>Today, 15:20</time>
+          <p>Wicked pins</p>
+        </li>
+          <button>see all</button>
+      </ul>
     </div>
   </div>
 
