working on the image hover state but taking me sometime. going to try something new

--- a/index.html
+++ b/index.html
@@ -146,28 +146,28 @@
         </ul>
       </nav>
       <div class="dashboardPosts">
-      <i class="fa fa-sort-asc fa-3x"></i>
-      <div class="postsContainer">
-        <figure class="col-md-4">
-          <a href="">
-            <img src="http://lorempixel.com/400/200" />
-          </a>
-          <figcaption>Outdoor</figcaption>
-        </figure>
+        <i class="fa fa-sort-asc fa-3x"></i>
+        <div class="postsContainer">
+          <figure class="col-md-4">
+            <a href="">
+              <img src="http://lorempixel.com/400/200" class="overlay" />
+            </a>
+            <figcaption>Outdoor</figcaption>
+          </figure>
 
-        <figure class="col-md-4">
-          <a href="">
-            <img src="http://lorempixel.com/400/200" />
-          </a>
-          <figcaption>Outdoor</figcaption>
-        </figure>
-        <figure class="col-md-4">
-          <a href="">
-            <img src="http://lorempixel.com/400/200" />
-          </a>
-          <figcaption>Outdoor</figcaption>
-        </figure>
-      </div>
+          <figure class="col-md-4">
+            <a href="">
+              <img src="http://lorempixel.com/400/200" />
+            </a>
+            <figcaption>Outdoor</figcaption>
+          </figure>
+          <figure class="col-md-4">
+            <a href="">
+              <img src="http://lorempixel.com/400/200" />
+            </a>
+            <figcaption>Outdoor</figcaption>
+          </figure>
+        </div>
       </div>
     </div>
     <footer>
@@ -188,7 +188,7 @@
           <time>Today, 15:20</time>
           <p>Wicked pins</p>
         </li>
-          <button>see all</button>
+        <button>see all</button>
       </ul>
     </div>
   </div>
