got the hover state on the dashboard images and got the icons to show up as perfectly circular and identical as possible.

--- a/index.html
+++ b/index.html
@@ -150,20 +150,41 @@
         <div class="postsContainer">
           <figure class="col-md-4">
             <a href="">
-              <img src="http://lorempixel.com/400/200" class="overlay" />
+              <div id="postsImage">
+                <div id="imageOverlay">
+                  <span class="overlayIcons">
+                    <i class="fa fa-pencil-square-o"></i>
+                    <i class="fa fa-trash-o"></i>
+                  </span>
+                </div>
+              </div>
             </a>
             <figcaption>Outdoor</figcaption>
           </figure>
 
           <figure class="col-md-4">
             <a href="">
-              <img src="http://lorempixel.com/400/200" />
+              <div id="postsImage">
+                <div id="imageOverlay">
+                  <span class="overlayIcons">
+                    <i class="fa fa-pencil-square-o"></i>
+                    <i class="fa fa-trash-o"></i>
+                  </span>
+                </div>
+              </div>
             </a>
             <figcaption>Outdoor</figcaption>
           </figure>
           <figure class="col-md-4">
             <a href="">
-              <img src="http://lorempixel.com/400/200" />
+              <div id="postsImage">
+                <div id="imageOverlay">
+                  <span class="overlayIcons">
+                    <i class="fa fa-pencil-square-o"></i>
+                    <i class="fa fa-trash-o"></i>
+                  </span>
+                </div>
+              </div>
             </a>
             <figcaption>Outdoor</figcaption>
           </figure>
