got the hero image to be a good size that doesnt look scrunched. added jumbottron to the html and removed the margin on the jumbo tron. cropped the image for the hero image to help it fit well since it was very large.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-  <!-- Add your site or application content here -->
+
   <div class="siteContainer">
 
     <nav class="headerNav">
@@ -72,13 +72,15 @@
     </nav>
 
     <!-- hero image with carousel -->
-    <header class="heroImage">
+    <!-- <header class="heroImage"> -->
+    <div class="jumbotron heroImage">
       <div class="heroText">
         <p>Featured set of Pins - 10th December, 2014 </p>
         <h1>Monument Decor
           <h1>
       </div>
-    </header>
+    </div>
+    <!-- </header> -->
 
     <!-- sidebar content -->
     <aside>
