got the pin and heart icons at the top right of the images but was not able to get the dashboard images as per spec nor did I write in the numbers next to the icons.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <![endif]-->
 
 
-  <div class="siteContainer">
+  <div class="Container">
 
     <nav class="headerNav">
       <!-- Cado Logo image far left of the nav bar -->
@@ -105,6 +105,7 @@
         <h1>Monument Decor
           <h1>
       </div>
+      <span class="pinHeartIcons"><i class="fa fa-thumb-tack fa-3x"></i><i class="fa fa-heart-o fa-3x"></i></span>
     </div>
     <!-- </header> -->
 
@@ -178,6 +179,7 @@
         <div class="postsContainer">
           <figure class="col-md-4">
             <a href="">
+              <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
               <div id="postsImage">
                 <div id="imageOverlay">
                   <span class="overlayIcons">
@@ -192,6 +194,7 @@
 
           <figure class="col-md-4">
             <a href="">
+              <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
               <div id="postsImage">
                 <div id="imageOverlay">
                   <span class="overlayIcons">
@@ -205,6 +208,7 @@
           </figure>
           <figure class="col-md-4">
             <a href="">
+              <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
               <div id="postsImage">
                 <div id="imageOverlay">
                   <span class="overlayIcons">
