playing with media queries to see if that would offer a simple solution to my responsive issue but no avail. it only looks good at viewport width of 1140px and

--- a/index.html
+++ b/index.html
@@ -177,49 +177,51 @@
       <div class="dashboardPosts">
         <i class="fa fa-sort-asc fa-3x"></i>
         <div class="postsContainer">
-          <figure class="col-md-4">
-            <a href="">
-              <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
-              <div id="postsImage">
-                <div id="imageOverlay">
-                  <span class="overlayIcons">
-                    <i class="fa fa-pencil-square-o"></i>
-                    <i class="fa fa-trash-o"></i>
-                  </span>
+          <div class="row">
+            <figure class="col-md-4">
+              <a href="">
+                <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
+                <div id="postsImage">
+                  <div id="imageOverlay">
+                    <span class="overlayIcons">
+                      <i class="fa fa-pencil-square-o"></i>
+                      <i class="fa fa-trash-o"></i>
+                    </span>
+                  </div>
                 </div>
-              </div>
-            </a>
-            <figcaption>Outdoor</figcaption>
-          </figure>
+              </a>
+              <figcaption>Outdoor</figcaption>
+            </figure>
 
-          <figure class="col-md-4">
-            <a href="">
-              <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
-              <div id="postsImage">
-                <div id="imageOverlay">
-                  <span class="overlayIcons">
-                    <i class="fa fa-pencil-square-o"></i>
-                    <i class="fa fa-trash-o"></i>
-                  </span>
+            <figure class="col-md-4">
+              <a href="">
+                <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
+                <div id="postsImage">
+                  <div id="imageOverlay">
+                    <span class="overlayIcons">
+                      <i class="fa fa-pencil-square-o"></i>
+                      <i class="fa fa-trash-o"></i>
+                    </span>
+                  </div>
                 </div>
-              </div>
-            </a>
-            <figcaption>Outdoor</figcaption>
-          </figure>
-          <figure class="col-md-4">
-            <a href="">
-              <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
-              <div id="postsImage">
-                <div id="imageOverlay">
-                  <span class="overlayIcons">
-                    <i class="fa fa-pencil-square-o"></i>
-                    <i class="fa fa-trash-o"></i>
-                  </span>
+              </a>
+              <figcaption>Outdoor</figcaption>
+            </figure>
+            <figure class="col-md-4">
+              <a href="">
+                <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
+                <div id="postsImage">
+                  <div id="imageOverlay">
+                    <span class="overlayIcons">
+                      <i class="fa fa-pencil-square-o"></i>
+                      <i class="fa fa-trash-o"></i>
+                    </span>
+                  </div>
                 </div>
-              </div>
-            </a>
-            <figcaption>Outdoor</figcaption>
-          </figure>
+              </a>
+              <figcaption>Outdoor</figcaption>
+            </figure>
+          </div>
         </div>
       </div>
     </div>
