changed styling on the caret and the height of the hero image because it was thown off. still only looks good at viewport size of 1045px ish

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="heroText">
         <p>Featured set of Pins - 10th December, 2014 </p>
         <h1>Monument Decor
-          <h1>
+        </h1>
       </div>
       <span class="pinHeartIcons"><i class="fa fa-thumb-tack fa-3x"></i><i class="fa fa-heart-o fa-3x"></i></span>
     </div>
@@ -227,7 +227,7 @@
     </div>
     <footer>
     </footer>
-    <!-- Template for the popover on the inbox line element: class="hide" -->
+    <!-- Template for the popover on the inbox line element -->
     <div id="popoverTemplate" class="hide">
       <ul class="userMessages">
         <li>
