--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <![endif]-->
 
 
-  <div class="Container">
+  <div class="container">
 
     <nav class="headerNav">
       <!-- Cado Logo image far left of the nav bar -->
@@ -72,8 +72,8 @@
     </nav>
 
     <!-- hero image with carousel -->
-    <!-- <header class="heroImage"> -->
-    <div class="heroImage">
+    <header class="heroImage">
+    <!-- <div class="heroImage"> -->
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -84,6 +84,11 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
+            <img src="/img/photoRedBldg.jpg" alt="Hero Image" >
+            <div class="carousel-caption">
+            </div>
+          </div>
+          <!-- <div class="item">
             <img src="/img/rsz_2rsz_photoRedBldg.jpg" alt="">
             <div class="carousel-caption">
             </div>
@@ -92,12 +97,7 @@
             <img src="/img/rsz_2rsz_photoRedBldg.jpg" alt="">
             <div class="carousel-caption">
             </div>
-          </div>
-          <div class="item">
-            <img src="/img/rsz_2rsz_photoRedBldg.jpg" alt="">
-            <div class="carousel-caption">
-            </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="heroText">
@@ -106,12 +106,11 @@
         </h1>
       </div>
       <span class="pinHeartIcons"><i class="fa fa-thumb-tack fa-3x"></i><i class="fa fa-heart-o fa-3x"></i></span>
-    </div>
-    <!-- </header> -->
+    <!-- </div> -->
+    </header>
 
     <!-- sidebar content -->
     <aside>
-      
         <img src="img/Garrett.jpg" alt="Profile Owner Image" class="profileImg" />
         <h3>Carl von Hoff</h3>
         <p>Furniture Designer</p>
@@ -159,10 +158,10 @@
         </ul>
 
     </aside>
-    <div class="mainContent">
+    <section class="mainContent">
       <nav class="postsNav">
         <ul>
-          <div class="leftNav">
+          <div class="sectionLeftNav">
             <li id="navLinesLeft"><a href="#">board</a></li>
             <li id="navLinesLeft"><a href="#">following</a></li>
             <li id="navLinesLeft"><a href="#">guest book</a></li>
@@ -173,12 +172,11 @@
             </li>
           </div>
         </ul>
+        <i class="fa fa-sort-asc fa-3x"></i>
       </nav>
       <div class="dashboardPosts">
-        <i class="fa fa-sort-asc fa-3x"></i>
         <div class="postsContainer">
-          <div class="row">
-            <figure class="col-md-4">
+            <figure>
               <a href="">
                 <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
                 <div id="postsImage">
@@ -193,7 +191,7 @@
               <figcaption>Outdoor</figcaption>
             </figure>
 
-            <figure class="col-md-4">
+            <figure>
               <a href="">
                 <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
                 <div id="postsImage">
@@ -207,7 +205,7 @@
               </a>
               <figcaption>Outdoor</figcaption>
             </figure>
-            <figure class="col-md-4">
+            <figure>
               <a href="">
                 <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
                 <div id="postsImage">
@@ -221,10 +219,23 @@
               </a>
               <figcaption>Outdoor</figcaption>
             </figure>
-          </div>
+            <figure>
+              <a href="">
+                <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
+                <div id="postsImage">
+                  <div id="imageOverlay">
+                    <span class="overlayIcons">
+                      <i class="fa fa-pencil-square-o"></i>
+                      <i class="fa fa-trash-o"></i>
+                    </span>
+                  </div>
+                </div>
+              </a>
+              <figcaption>Outdoor</figcaption>
+            </figure>
         </div>
       </div>
-    </div>
+    </section>
     <footer>
     </footer>
     <!-- Template for the popover on the inbox line element -->
