working on the aside. did a bunch of ish.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <!-- hero image with carousel -->
     <header class="heroImage">
-    <!-- <div class="heroImage"> -->
+      <!-- <div class="heroImage"> -->
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -84,7 +84,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img src="/img/photoRedBldg.jpg" alt="Hero Image" >
+            <img src="/img/photoRedBldg.jpg" alt="Hero Image">
             <div class="carousel-caption">
             </div>
           </div>
@@ -106,58 +106,60 @@
         </h1>
       </div>
       <span class="pinHeartIcons"><i class="fa fa-thumb-tack fa-3x"></i><i class="fa fa-heart-o fa-3x"></i></span>
-    <!-- </div> -->
+      <!-- </div> -->
     </header>
 
     <!-- sidebar content -->
+
     <aside>
-        <img src="img/Garrett.jpg" alt="Profile Owner Image" class="profileImg" />
-        <h3>Carl von Hoff</h3>
-        <p>Furniture Designer</p>
-        <div class="buttonsFollowMessage">
-          <button name="following">
-            <i class="fa fa-plus"></i>
-            <i class="fa fa-user"></i> following
-          </button>
-          <button name="message">
-            <i class="fa fa-comment"></i> message
-          </button>
-        </div>
-        <hr>
-        <!-- number of stories and followers-->
-        <div class="storiesAndFollowers">
-          <ul>
-            <li>
-              <p>874</p>
-              <p>Stories</p>
-            </li>
-            <li>
-              <p>10
-                <span class="m">M</span>
-              </p>
-              <p>Followers</p>
-            </li>
-          </ul>
-        </div>
-        <hr>
-        <ul class="timeline">
-          <!-- posts timeline: first child (odd children) justify text right, second child (even children) justify text left  -->
+      <img src="img/Garrett.jpg" alt="Profile Owner Image" class="profileImg" />
+      <h3>Carl von Hoff</h3>
+      <p>Furniture Designer</p>
+      <div class="buttonsFollowMessage">
+        <button name="following">
+          <i class="fa fa-plus"></i>
+          <i class="fa fa-user"></i> following
+        </button>
+        <button name="message">
+          <i class="fa fa-comment"></i> message
+        </button>
+      </div>
+      <hr>
+      <!-- number of stories and followers-->
+      <div class="storiesAndFollowers">
+        <ul>
           <li>
-            <p>10 minutes ago </br>
-              Pinned
-              <em>Nordic Architechture</em> to his board.</p>
-            <i class="fa fa-circle"></i>
+            <p>874</p>
+            <p>Stories</p>
           </li>
           <li>
-            <i class="fa fa-circle secondCircle"></i>
-            <p>10 minutes ago </br>
-              Updated his
-              <em>profile picture.</em>
+            <p>10
+              <span class="m">M</span>
             </p>
+            <p>Followers</p>
           </li>
         </ul>
-
+      </div>
+      <hr>
+      <ul class="timeline">
+        <!-- posts timeline: first child (odd children) justify text right, second child (even children) justify text left  -->
+        <li>
+          <p>10 minutes ago </br>
+            Pinned
+            <em>Nordic Architechture</em> to his board.</p>
+          <i class="fa fa-circle"></i>
+        </li>
+        <li>
+          <i class="fa fa-circle secondCircle"></i>
+          <p>10 minutes ago </br>
+            Updated his
+            <em>profile picture.</em>
+          </p>
+        </li>
+      </ul>
     </aside>
+
+<!-- Dashboard Content  -->
     <section class="mainContent">
       <nav class="postsNav">
         <ul>
@@ -174,70 +176,69 @@
         </ul>
         <i class="fa fa-sort-asc fa-3x"></i>
       </nav>
-      <div class="dashboardPosts">
-        <div class="postsContainer">
-            <figure>
-              <a href="">
-                <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
-                <div id="postsImage">
-                  <div id="imageOverlay">
-                    <span class="overlayIcons">
-                      <i class="fa fa-pencil-square-o"></i>
-                      <i class="fa fa-trash-o"></i>
-                    </span>
-                  </div>
-                </div>
-              </a>
-              <figcaption>Outdoor</figcaption>
-            </figure>
 
-            <figure>
-              <a href="">
-                <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
-                <div id="postsImage">
-                  <div id="imageOverlay">
-                    <span class="overlayIcons">
-                      <i class="fa fa-pencil-square-o"></i>
-                      <i class="fa fa-trash-o"></i>
-                    </span>
-                  </div>
-                </div>
-              </a>
-              <figcaption>Outdoor</figcaption>
-            </figure>
-            <figure>
-              <a href="">
-                <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
-                <div id="postsImage">
-                  <div id="imageOverlay">
-                    <span class="overlayIcons">
-                      <i class="fa fa-pencil-square-o"></i>
-                      <i class="fa fa-trash-o"></i>
-                    </span>
-                  </div>
-                </div>
-              </a>
-              <figcaption>Outdoor</figcaption>
-            </figure>
-            <figure>
-              <a href="">
-                <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
-                <div id="postsImage">
-                  <div id="imageOverlay">
-                    <span class="overlayIcons">
-                      <i class="fa fa-pencil-square-o"></i>
-                      <i class="fa fa-trash-o"></i>
-                    </span>
-                  </div>
-                </div>
-              </a>
-              <figcaption>Outdoor</figcaption>
-            </figure>
-        </div>
+      <div class="dashboardPosts">
+
+        <figure>
+          <a href="">
+            <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
+            <!-- <div id="postsImage"> -->
+              <div id="imageOverlay">
+                <span class="overlayIcons">
+                  <i class="fa fa-pencil-square-o"></i>
+                  <i class="fa fa-trash-o"></i>
+                </span>
+              </div>
+            <!-- </div> -->
+          </a>
+          <figcaption>Outdoor</figcaption>
+        </figure>
+
+        <figure>
+          <a href="">
+            <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
+            <div id="postsImage">
+              <div id="imageOverlay">
+                <span class="overlayIcons">
+                  <i class="fa fa-pencil-square-o"></i>
+                  <i class="fa fa-trash-o"></i>
+                </span>
+              </div>
+            </div>
+          </a>
+          <figcaption>Outdoor</figcaption>
+        </figure>
+        <figure class="thirdFigure">
+          <a href="">
+            <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
+            <div id="postsImage">
+              <div id="imageOverlay">
+                <span class="overlayIcons">
+                  <i class="fa fa-pencil-square-o"></i>
+                  <i class="fa fa-trash-o"></i>
+                </span>
+              </div>
+            </div>
+          </a>
+          <figcaption>Outdoor</figcaption>
+        </figure>
+        <figure class="fourthFigure">
+          <a href="">
+            <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"></i><i class="fa fa-heart-o"></i></span>
+            <div id="postsImage">
+              <div id="imageOverlay">
+                <span class="overlayIcons">
+                  <i class="fa fa-pencil-square-o"></i>
+                  <i class="fa fa-trash-o"></i>
+                </span>
+              </div>
+            </div>
+          </a>
+          <figcaption>Outdoor</figcaption>
+        </figure>
       </div>
     </section>
-    <footer>
-    </footer>
+
     <!-- Template for the popover on the inbox line element -->
     <div id="popoverTemplate" class="hide">
       <ul class="userMessages">
