got the dashboard of images up to snuff. have a bit of things to tweak but on the home stretch.

--- a/index.html
+++ b/index.html
@@ -151,14 +151,18 @@
       <ul class="timeline">
         <!-- posts timeline: first child (odd children) justify text right, second child (even children) justify text left  -->
         <li>
-          <p><span class="postTime">10 minutes ago</span></br>
+          <p>
+            <span class="postTime">10 minutes ago</span>
+            </br>
             Pinned
             <em>Nordic Architechture</em> to his board.</p>
           <i class="fa fa-circle"></i>
         </li>
         <li>
           <i class="fa fa-circle secondCircle"></i>
-          <p><span class="postTime">10 minutes ago</span> </br>
+          <p>
+            <span class="postTime">10 minutes ago</span>
+            </br>
             Updated his
             <em>profile picture.</em>
           </p>
@@ -189,7 +193,7 @@
 
       <!-- Dashboard posts/images -->
       <div class="dashboardPosts">
-<!-- First Figure -->
+        <!-- First Figure -->
         <figure class="firstFigure">
           <a href="">
             <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"><p>2</p></i><i class="fa fa-heart"><p>2</p></i></span>
@@ -204,37 +208,37 @@
           </a>
           <figcaption class="firstFigcaption">Outdoor</figcaption>
         </figure>
-<!-- End of First figure -->
+        <!-- End of First figure -->
 
-<!-- Second figure -->
+        <!-- Second figure -->
         <figure class="secondFigure">
           <a href="">
             <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"><p>1</p></i><i class="fa fa-heart"><p>0</p></i></span>
-            <div id="postsImage">
+            <!-- <div id="postsImage"> -->
               <div id="imageOverlay">
                 <span class="overlayIcons">
                   <i class="fa fa-pencil-square-o"></i>
                   <i class="fa fa-trash-o"></i>
                 </span>
               </div>
-            </div>
+            <!-- </div> -->
           </a>
           <figcaption class="secondFigcaption">Plates & </br> Weird Food</figcaption>
         </figure>
-<!-- End of second figure -->
+        <!-- End of second figure -->
 
-<!-- Third figure -->
+        <!-- Third figure -->
         <figure class="thirdFigure">
           <a href="">
             <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"><p>22</p></i><i class="fa fa-heart"><p>30</p></i></span>
-            <div id="postsImage">
+            <!-- <div id="postsImage"> -->
               <div id="imageOverlay">
                 <span class="overlayIcons">
                   <i class="fa fa-pencil-square-o"></i>
                   <i class="fa fa-trash-o"></i>
                 </span>
               </div>
-            </div>
+            <!-- </div> -->
           </a>
           <figcaption class="thirdFigcaption">Norm </br> Architecture</figcaption>
         </figure>
@@ -244,7 +248,33 @@
         <figure class="fourthFigure">
           <a href="">
             <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"><p>2</p></i><i class="fa fa-heart"><p>2</p></i></span>
-            <div id="postsImage">
+            <!-- <div id="postsImage"> -->
+              <div id="imageOverlay">
+                <span class="overlayIcons">
+                  <i class="fa fa-pencil-square-o"></i>
+                  <i class="fa fa-trash-o"></i>
+                </span>
+              </div>
+            <!-- </div> -->
+          </a>
+          <figcaption class="fourthFigcaption">
+            <p>"Form follows function"</p>
+            <em>A principle associated with modernist architecture and industrial design in the 20th century. The principle is that the shape of a building...</em>
+          </figcaption>
+        </figure>
+        <!-- End of fourth figure -->
+        <!-- Fifth figure -->
+        <figure class="fifthFigure">
+          <figcaption class="fifthFigcaption">
+            <p>Carl Von Hoff commented on
+              <strong>"Scandinavian Minimalism"</strong>
+            </p>
+            <hr>
+            <em>Simple clean shapes and a big dose of what they call "Lagom".</em>
+          </figcaption>
+          <a href="">
+            <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"><p>2</p></i><i class="fa fa-heart"><p>2</p></i></span>
+            <div class="fifthPostImage">
               <div id="imageOverlay">
                 <span class="overlayIcons">
                   <i class="fa fa-pencil-square-o"></i>
@@ -253,9 +283,41 @@
               </div>
             </div>
           </a>
-          <figcaption class="fourthFigcaption"><p>"Form follows function"</p><em>A principle associated with modernist architecture and industrial design in the 20th century. The principle is that the shape of a building...</em></figcaption>
         </figure>
-        <!-- End of fourth figure -->
+        <!-- End of fifth figure -->
+        <!-- Sixth Figure -->
+        <figure class="sixthFigure">
+          <a href="">
+            <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"><p>2</p></i><i class="fa fa-heart"><p>2</p></i></span>
+            <!-- <div id="postsImage"> -->
+            <div id="imageOverlay">
+              <span class="overlayIcons">
+                <i class="fa fa-pencil-square-o"></i>
+                <i class="fa fa-trash-o"></i>
+              </span>
+            </div>
+            <!-- </div> -->
+          </a>
+          <figcaption class="firstFigcaption">Outdoor</figcaption>
+        </figure>
+        <!-- End of Sixth figure -->
+
+        <!-- Seventh figure -->
+        <figure class="seventhFigure">
+          <a href="">
+            <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"><p>1</p></i><i class="fa fa-heart"><p>0</p></i></span>
+            <!-- <div id="postsImage"> -->
+              <div id="imageOverlay">
+                <span class="overlayIcons">
+                  <i class="fa fa-pencil-square-o"></i>
+                  <i class="fa fa-trash-o"></i>
+                </span>
+              </div>
+            <!-- </div> -->
+          </a>
+          <figcaption class="secondFigcaption">Plates & </br> Weird Food</figcaption>
+        </figure>
+        <!-- End of seventh figure -->
       </div>
       <!-- End of dashboard images -->
     </section>
