--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img src="/img/photoRedBldg.jpg" alt="Hero Image">
+            <img src="/img/rsz_2rsz_photoRedBldg.jpg" alt="Hero Image">
             <div class="carousel-caption">
             </div>
           </div>
           <div class="item">
-            <img src="/img/rsz_2rsz_photoRedBldg.jpg" alt="">
+            <img src="/img/Mountains.jpg" alt="">
             <div class="carousel-caption">
             </div>
           </div>
           <div class="item">
-            <img src="/img/rsz_2rsz_photoRedBldg.jpg" alt="">
+            <img src="/img/Lama.jpg" alt="">
             <div class="carousel-caption">
             </div>
           </div>
