smoothing out the wrinkles. got two more images in the hero carousel and put in my own images in the dashboard figures. got the blue icon to the top right of the your board nav text and just have the popover to perfect

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           </li>
           <li id="navLinesLeft">
             <a href="#">your board</a>
+              <i class="fa fa-circle boardCircle"></i>
           </li>
           <!-- green dot to be needs to be on top right corner of text -->
           <li id="navLinesLeft">
@@ -94,12 +95,12 @@
             </div>
           </div>
           <div class="item">
-            <img src="/img/Mountains.jpg" alt="">
+            <img src="/img/sky-rose.jpg" alt="">
             <div class="carousel-caption">
             </div>
           </div>
           <div class="item">
-            <img src="/img/Lama.jpg" alt="">
+            <img src="/img/Boat.jpg" alt="">
             <div class="carousel-caption">
             </div>
           </div>
