removed dead code and commented out code blocks. cleaned up the sections and made sure nothing was off. got the hover state on the dashboard images to only overlap the images themselves without overlap on the top. tried to target the popover but could not find the necessary css declaration that would properly manipulate the inbox popover in order for the popover to look exactly like the spec. also, used images that i have taken to populate the figures in the dashboard section of the page instead of using lorem pixel.

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
           </li>
           <li id="navLinesLeft">
             <a href="#">your board</a>
-              <i class="fa fa-circle boardCircle"></i>
+            <i class="fa fa-circle boardCircle"></i>
           </li>
-          <!-- green dot to be needs to be on top right corner of text -->
+          <!-- green dot to be needs to be on top right corner of 'your board' text -->
           <li id="navLinesLeft">
             <a href="#" class="inboxPopover" data-container="body" data-toggle="popover" data-placement="bottom" data-trigger="hover" data-html="true">inbox</a>
           </li>
@@ -79,7 +79,6 @@
 
     <!-- hero image with carousel -->
     <header class="heroImage">
-      <!-- <div class="heroImage"> -->
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -112,8 +111,6 @@
         <h1>Monument Decor
         </h1>
       </div>
-      <!-- <span class="pinHeartIcons"><i class="fa fa-thumb-tack fa-3x"></i><i class="fa fa-heart-o fa-3x"></i></span> -->
-      <!-- </div> -->
     </header>
     <!-- End hero image carousel -->
 
@@ -149,8 +146,9 @@
       </div>
       <!-- End stories and followers -->
       <hr>
+      <!-- posts timeline -->
       <ul class="timeline">
-        <!-- posts timeline: first child (odd children) justify text right, second child (even children) justify text left  -->
+        <!-- posts timeline: first child (odd children) text-align right, second child (even children) justify text left  -->
         <li>
           <p>
             <span class="postTime">10 minutes ago</span>
@@ -169,6 +167,7 @@
           </p>
         </li>
       </ul>
+      <!-- end posts timeline -->
     </aside>
     <!-- End of sidebar content -->
 
@@ -198,14 +197,12 @@
         <figure class="firstFigure">
           <a href="">
             <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"><p>2</p></i><i class="fa fa-heart"><p>2</p></i></span>
-            <!-- <div id="postsImage"> -->
             <div id="imageOverlay">
               <span class="overlayIcons">
                 <i class="fa fa-pencil-square-o"></i>
                 <i class="fa fa-trash-o"></i>
               </span>
             </div>
-            <!-- </div> -->
           </a>
           <figcaption class="firstFigcaption">Outdoor</figcaption>
         </figure>
@@ -215,14 +212,12 @@
         <figure class="secondFigure">
           <a href="">
             <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"><p>1</p></i><i class="fa fa-heart"><p>0</p></i></span>
-            <!-- <div id="postsImage"> -->
-              <div id="imageOverlay">
-                <span class="overlayIcons">
-                  <i class="fa fa-pencil-square-o"></i>
-                  <i class="fa fa-trash-o"></i>
-                </span>
-              </div>
-            <!-- </div> -->
+            <div id="imageOverlay">
+              <span class="overlayIcons">
+                <i class="fa fa-pencil-square-o"></i>
+                <i class="fa fa-trash-o"></i>
+              </span>
+            </div>
           </a>
           <figcaption class="secondFigcaption">Plates & </br> Weird Food</figcaption>
         </figure>
@@ -232,14 +227,12 @@
         <figure class="thirdFigure">
           <a href="">
             <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"><p>22</p></i><i class="fa fa-heart"><p>30</p></i></span>
-            <!-- <div id="postsImage"> -->
-              <div id="imageOverlay">
-                <span class="overlayIcons">
-                  <i class="fa fa-pencil-square-o"></i>
-                  <i class="fa fa-trash-o"></i>
-                </span>
-              </div>
-            <!-- </div> -->
+            <div id="imageOverlay">
+              <span class="overlayIcons">
+                <i class="fa fa-pencil-square-o"></i>
+                <i class="fa fa-trash-o"></i>
+              </span>
+            </div>
           </a>
           <figcaption class="thirdFigcaption">Norm </br> Architecture</figcaption>
         </figure>
@@ -249,14 +242,12 @@
         <figure class="fourthFigure">
           <a href="">
             <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"><p>2</p></i><i class="fa fa-heart"><p>2</p></i></span>
-            <!-- <div id="postsImage"> -->
-              <div id="imageOverlay">
-                <span class="overlayIcons">
-                  <i class="fa fa-pencil-square-o"></i>
-                  <i class="fa fa-trash-o"></i>
-                </span>
-              </div>
-            <!-- </div> -->
+            <div id="imageOverlay">
+              <span class="overlayIcons">
+                <i class="fa fa-pencil-square-o"></i>
+                <i class="fa fa-trash-o"></i>
+              </span>
+            </div>
           </a>
           <figcaption class="fourthFigcaption">
             <p>"Form follows function"</p>
@@ -290,14 +281,12 @@
         <figure class="sixthFigure">
           <a href="">
             <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"><p>2</p></i><i class="fa fa-heart"><p>2</p></i></span>
-            <!-- <div id="postsImage"> -->
             <div id="imageOverlay">
               <span class="overlayIcons">
                 <i class="fa fa-pencil-square-o"></i>
                 <i class="fa fa-trash-o"></i>
               </span>
             </div>
-            <!-- </div> -->
           </a>
           <figcaption class="firstFigcaption">Outdoor</figcaption>
         </figure>
@@ -307,14 +296,12 @@
         <figure class="seventhFigure">
           <a href="">
             <span class="dashboardImgIcons"><i class="fa fa-thumb-tack"><p>1</p></i><i class="fa fa-heart"><p>0</p></i></span>
-            <!-- <div id="postsImage"> -->
-              <div id="imageOverlay">
-                <span class="overlayIcons">
-                  <i class="fa fa-pencil-square-o"></i>
-                  <i class="fa fa-trash-o"></i>
-                </span>
-              </div>
-            <!-- </div> -->
+            <div id="imageOverlay">
+              <span class="overlayIcons">
+                <i class="fa fa-pencil-square-o"></i>
+                <i class="fa fa-trash-o"></i>
+              </span>
+            </div>
           </a>
           <figcaption class="secondFigcaption">Plates & </br> Weird Food</figcaption>
         </figure>
